--- a/External_Interrupt/.project
+++ b/External_Interrupt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Interrupt</name>
+	<name>External_Interrupt</name>
 	<comment></comment>
 	<projects>
 	</projects>
